--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
             border-left: 5px solid #00ff7f;
             padding: 10px;
             margin: 20px 0;
+            margin-left: 5%;
+            margin-right: 5%;
         }
         .exclusive-content {
             color: #ff6347;
