--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ function submitEmail() {
     }
 
     // Send email to the server
-    fetch('http://localhost:3000/submit-email', {
+    fetch('https://verising.onrender.com/submit-email', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ email: emailInput })
