--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VFH: f2f entrance only</title>
+    <title>Verisign For Human</title>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-74NN43WTL7"></script>
     <script>
@@ -121,11 +121,11 @@
 
 <header>
     <h1>VFH: f2f entrance only</h1>
-    <p>Verisign For Human</p>
+    <p>f2f entrance only</p>
 </header>
 
 <section class="section hero centered-content">
-    <p><span class="animated-number" id="member-count">5678</span> humans in the network</p>
+    <p><span class="animated-number" id="member-count">5682</span> humans in the network</p>
 </section>
 
 <section class="section member-count">
