--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 <body>
 
 <header>
-    <h1>VFH: f2f entrance only</h1>
+    <h1>Verisign For Human</h1>
     <p>f2f entrance only</p>
 </header>
 
